uploaded phpfiles and new code changes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "phpserver.phpPath": "C:\\xampp\\php\\php.exe",
+    "phpserver.phpPath": "C:\\Users\\adria\\OneDrive\\Documents\\GitHub\\phpProject\\.vscode\\PHP\\php.exe",
     "phpserver.phpConfigPath": "C:\\xampp\\php\\php.ini"
 }
